added bible linking

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "formik": "^1.4.1",
     "i18n-js": "^3.1.0",
     "moment-es6": "^1.0.0",
+    "moment-with-locales-es6": "^1.0.1",
     "parse5": "^5.1.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-calendar-events": "^1.6.4",
+    "react-native-collapsible": "^1.4.0",
     "react-native-firebase": "^5.1.1",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.0.12",
