--- a/ios/Cenacle/Info.plist
+++ b/ios/Cenacle/Info.plist
@@ -77,5 +77,7 @@
 	<array>
 		<string>audio</string>
 	</array>
+  <key>NSCalendarsUsageDescription</key>
+  <string>This app requires access to the calendar to add event upon user agreement.</string>
 </dict>
 </plist>
