added streaming player successfully android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,7 +143,6 @@ android {
 dependencies {
     compile project(':react-native-track-player')
     compile project(':react-native-video')
-    compile project(':react-native-calendar-events')
     compile project(':realm')
     compile project(':react-native-fs')
     compile project(':react-native-firebase')
@@ -158,8 +157,9 @@ dependencies {
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-firestore:17.1.5"
     implementation "com.google.firebase:firebase-storage:16.0.5"
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar' // <-- Add this line
     implementation project(':react-native-firebase')
-    compile project(':react-native-calendar-events')
     implementation 'com.android.support:multidex:1.0.3'
 }
 
