--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,27 +3,24 @@
 
 target 'Cenacle' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
+  use_modular_headers!
 
   # Pods for Cenacle
-  pod 'Firebase/Core', '~> 5.11.0'
-  pod 'Firebase/Storage', '~> 5.11.0'
-  pod 'GoogleAppMeasurement', '~> 5.3.0'
-  pod 'Firebase/Firestore', '~> 5.11.0'
-  pod 'Firebase/Auth', '~> 5.11.0'
+  # Required by RNFirebase
+  pod 'Firebase/Core', '~> 5.15.0'
+  pod 'Firebase/Storage', '~> 5.15.0'
+  pod 'Firebase/Firestore', '~> 5.15.0'
+  pod 'Firebase/Auth', '~> 5.15.0'
+  pod 'Firebase/Messaging', '~> 5.15.0'
+  
+#  pod 'GoogleAppMeasurement', '~> 5.3.0'
+  
 
   target 'Cenacle-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
-#    pod 'RNFS', :path => '../node_modules/react-native-fs'
-#
-#    pod 'react-native-calendar-events', :path => '../node_modules/react-native-calendar-events'
-#
-#    pod 'RNAudioStreaming', :path => '../node_modules/react-native-audio-streaming'
 
-    pod 'react-native-video', :path => '../node_modules/react-native-video'
-
-    pod 'react-native-track-player', :path => '../node_modules/react-native-track-player'
 
 
   end
