--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apisauce": "^1.0.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "formik": "^1.4.1",
     "i18n-js": "^3.1.0",
     "moment-es6": "^1.0.0",
@@ -18,9 +19,8 @@
     "parse5": "^5.1.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-calendar-events": "^1.6.4",
     "react-native-collapsible": "^1.4.0",
-    "react-native-firebase": "^5.1.1",
+    "react-native-firebase": "^5.2.1",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-htmlview": "^0.13.0",
@@ -28,6 +28,7 @@
     "react-native-material-tabs": "^3.8.1",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
+    "react-native-progress": "^3.5.0",
     "react-native-swift": "^1.2.2",
     "react-native-swipeout": "^2.3.6",
     "react-native-track-player": "^1.1.1",
@@ -44,7 +45,13 @@
     "yup": "^0.26.6"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.0",
     "react-test-renderer": "16.6.3"
