--- a/ios/Cenacle/Info.plist
+++ b/ios/Cenacle/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app requires access to the calendar to add event upon user agreement.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
@@ -78,5 +78,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>FIREBASE_ANALYTICS_COLLECTION_DEACTIVATED</key>
+	<true/>
 </dict>
 </plist>
