--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^1.0.12",
     "react-native-htmlview": "^0.13.0",
     "react-native-languages": "^3.0.1",
+    "react-native-map-link": "^2.1.6",
     "react-native-material-tabs": "^3.8.1",
     "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
