--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,10 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '9.0'
 
 target 'Cenacle' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  use_frameworks!
-  use_modular_headers!
+#  use_frameworks!
+#  use_modular_headers!
 
   # Pods for Cenacle
   # Required by RNFirebase
